--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-flask[async]==3.0.0
-Flask_Cors==4.0.0
-Flask_SocketIO==5.3.6
-openai==1.6.1
-python-dotenv==1.0.0
-websockets==12.0
+Flask==3.0.2
+flask_cors==4.0.0
+flask_socketio==5.3.6
+openai==1.14.2
+pandas==2.2.1
+python-dotenv==1.0.1
+scikit_learn==1.4.1.post1
+sentence_transformers==2.6.0
 elevenlabs @ git+https://github.com/YoanGab/elevenlabs-python
